// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyManager for multi-level dependencies getSortedDependencies should sort dependencies correctly 1`] = `
{
  "react": [
    {
      "isGlobal": true,
      "name": "react",
      "subDependencies": {
        "react-dom": {
          "isGlobal": false,
          "name": "react-dom",
          "subDependencies": {},
          "version": "16.8.0",
        },
      },
      "version": "16.8.0",
    },
    {
      "isGlobal": false,
      "name": "react",
      "subDependencies": {},
      "version": "17.0.1",
    },
  ],
  "react-dom": [
    {
      "isGlobal": false,
      "name": "react-dom",
      "subDependencies": {},
      "version": "16.8.0",
    },
  ],
  "redux": [
    {
      "isGlobal": true,
      "name": "redux",
      "subDependencies": {
        "react": {
          "isGlobal": false,
          "name": "react",
          "subDependencies": {},
          "version": "17.0.1",
        },
      },
      "version": "4.0.5",
    },
  ],
}
`;

exports[`DependencyManager for multi-level dependencies should handle deep nested dependencies 1`] = `
{
  "react": [
    {
      "isGlobal": false,
      "name": "react",
      "subDependencies": {},
      "version": "16.8.0",
    },
  ],
  "react-dom": [
    {
      "isGlobal": false,
      "name": "react-dom",
      "subDependencies": {},
      "version": "16.8.0",
    },
  ],
  "react-redux": [
    {
      "isGlobal": true,
      "name": "react-redux",
      "subDependencies": {
        "react": {
          "isGlobal": false,
          "name": "react",
          "subDependencies": {},
          "version": "16.8.0",
        },
        "react-dom": {
          "isGlobal": false,
          "name": "react-dom",
          "subDependencies": {},
          "version": "16.8.0",
        },
      },
      "version": "7.2.0",
    },
  ],
  "redux": [
    {
      "isGlobal": true,
      "name": "redux",
      "subDependencies": {
        "react-redux": {
          "isGlobal": true,
          "name": "react-redux",
          "subDependencies": {
            "react": {
              "isGlobal": false,
              "name": "react",
              "subDependencies": {},
              "version": "16.8.0",
            },
            "react-dom": {
              "isGlobal": false,
              "name": "react-dom",
              "subDependencies": {},
              "version": "16.8.0",
            },
          },
          "version": "7.2.0",
        },
      },
      "version": "4.0.5",
    },
  ],
}
`;

exports[`DependencyManager for multi-level dependencies should handle multiple levels of subdependencies 1`] = `
{
  "react": [
    {
      "isGlobal": true,
      "name": "react",
      "subDependencies": {
        "react-dom": {
          "isGlobal": false,
          "name": "react-dom",
          "subDependencies": {},
          "version": "16.8.0",
        },
        "redux": {
          "isGlobal": true,
          "name": "redux",
          "subDependencies": {
            "react-redux": {
              "isGlobal": false,
              "name": "react-redux",
              "subDependencies": {},
              "version": "7.2.0",
            },
          },
          "version": "4.0.5",
        },
      },
      "version": "16.8.0",
    },
  ],
  "react-dom": [
    {
      "isGlobal": false,
      "name": "react-dom",
      "subDependencies": {},
      "version": "16.8.0",
    },
  ],
  "react-redux": [
    {
      "isGlobal": false,
      "name": "react-redux",
      "subDependencies": {},
      "version": "7.2.0",
    },
  ],
  "redux": [
    {
      "isGlobal": true,
      "name": "redux",
      "subDependencies": {
        "react-redux": {
          "isGlobal": false,
          "name": "react-redux",
          "subDependencies": {},
          "version": "7.2.0",
        },
      },
      "version": "4.0.5",
    },
  ],
}
`;

exports[`DependencyManager for multi-level dependencies should handle multiple levels of subdependencies remove 1`] = `
{
  "react-redux": [
    {
      "isGlobal": false,
      "name": "react-redux",
      "subDependencies": {},
      "version": "7.2.0",
    },
  ],
  "redux": [
    {
      "isGlobal": true,
      "name": "redux",
      "subDependencies": {
        "react-redux": {
          "isGlobal": false,
          "name": "react-redux",
          "subDependencies": {},
          "version": "7.2.0",
        },
      },
      "version": "4.0.5",
    },
  ],
}
`;
